--- a/HWHospital.vcxproj
+++ b/HWHospital.vcxproj
@@ -183,6 +183,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CHospital.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="HWHospital.h" />
     <ClInclude Include="HWHospitalDoc.h" />
@@ -193,6 +194,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CHospital.cpp" />
     <ClCompile Include="HWHospital.cpp" />
     <ClCompile Include="HWHospitalDoc.cpp" />
     <ClCompile Include="HWHospitalView.cpp" />
