--- a/HWHospital.vcxproj.filters
+++ b/HWHospital.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="pch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CHospital.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HWHospital.cpp">
@@ -54,6 +57,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CHospital.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
