--- a/HWHospital.vcxproj
+++ b/HWHospital.vcxproj
@@ -184,6 +184,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CHospital.h" />
+    <ClInclude Include="CHospitalDialog.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="HWHospital.h" />
     <ClInclude Include="HWHospitalDoc.h" />
@@ -195,6 +196,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CHospital.cpp" />
+    <ClCompile Include="CHospitalDialog.cpp" />
     <ClCompile Include="HWHospital.cpp" />
     <ClCompile Include="HWHospitalDoc.cpp" />
     <ClCompile Include="HWHospitalView.cpp" />
