--- a/HWHospital.vcxproj.filters
+++ b/HWHospital.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="CHospitalDialog.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CMedicalSubject.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CMediSubList.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HWHospital.cpp">
@@ -66,6 +72,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="CHospitalDialog.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CMedicalSubject.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CMediSubList.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
