--- a/HWHospital.vcxproj.filters
+++ b/HWHospital.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="CMediSubList.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CHospitalStatus.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HWHospital.cpp">
@@ -78,6 +81,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="CMediSubList.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CHospitalStatus.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
