검색 기능 (아직 각 기능에서 보완해야 할 것들이 있음)

--- a/HWHospital.vcxproj
+++ b/HWHospital.vcxproj
@@ -185,6 +185,7 @@
   <ItemGroup>
     <ClInclude Include="CHospital.h" />
     <ClInclude Include="CHospitalDialog.h" />
+    <ClInclude Include="CHospitalFindDlg.h" />
     <ClInclude Include="CHospitalStatus.h" />
     <ClInclude Include="CMedicalSubject.h" />
     <ClInclude Include="CMediSubList.h" />
@@ -200,6 +201,7 @@
   <ItemGroup>
     <ClCompile Include="CHospital.cpp" />
     <ClCompile Include="CHospitalDialog.cpp" />
+    <ClCompile Include="CHospitalFindDlg.cpp" />
     <ClCompile Include="CHospitalStatus.cpp" />
     <ClCompile Include="CMedicalSubject.cpp" />
     <ClCompile Include="CMediSubList.cpp" />
