--- a/aspdotnet_react.csproj
+++ b/aspdotnet_react.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.15" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.61" />
   </ItemGroup>
 
   <ItemGroup>
